<resources>
    <string name="app_name">FamilyMapClient</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_host">Server Host</string>
    <string name="prompt_port">Server Port</string>
    <string name="prompt_FirstName">First Name</string>
    <string name="prompt_LastName">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_userName">User Name</string>
    <string name="prompt_Gender">Gender (m/f)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="first_name"> First Name</string>
    <string name="last_name"> Last Name</string>
    <string name="gender"> gender</string>


    <string name="life_events">Life Events</string>
    <string name="family">Family</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_only_info">Register Only Info</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_search">Search</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>